[workspace]
members = ["keepers/*", "programs/*", "sdk", "tests", "utils/*"]

resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.7"
bytemuck = { version = "1.4.0", features = ["derive"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.21"
futures-util = "0.3.21"
home = "=0.5.11"
http = { version = "0.2.1" }
ipinfo = "3.1.1"
jito-priority-fee-distribution = { features = ["no-entrypoint"], git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
jito-steward = { path = "programs/steward", features = ["no-entrypoint"] }
jito-tip-distribution = { features = ["no-entrypoint"], git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
jito-tip-distribution-sdk = { git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
kobe-client = "0.1.9"
log = "0.4.18"
reqwest = { version = "0.11.27", features = ["json"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.102"
sha2 = "0.10.8"
solana-account-decoder = "=2.3.3"
solana-bincode = "=2.2.1"
solana-clap-utils = "=1.8.26"
solana-client = "=2.3.3"
solana-connection-cache = "2.3.3"
solana-gossip = { git = "https://github.com/gzalz/agave", branch = "gzalz/v2.3.3" }
solana-metrics = "=2.3.3"
solana-native-token = "=2.2.2"
solana-net-utils = "=2.3.3"
solana-packet = "=2.2.1"
solana-program = "=2.3.0"
solana-program-test = "=2.3.3"
solana-pubkey = "=2.4.0"
solana-remote-wallet = "=2.3.3"
solana-rpc-client = "=2.3.3"
solana-rpc-client-api = "=2.3.3"
solana-quic-client = "2.3.3"
solana-sdk = "=2.3.1"
solana-streamer = { git = "https://github.com/gzalz/agave", branch = "gzalz/v2.3.3" }
solana-system-interface = "1.0.0"
solana-tpu-client = "=2.3.3"
solana-transaction-status = "=2.3.3"
solana-version = "=2.3.3"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-pod = "0.5.1"
spl-stake-pool = { features = ["no-entrypoint"], version = "2.0.0" }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
squads-multisig = { git = "https://github.com/jito-foundation/squads-v4", rev = "8deba5de275904e2336c46188ab3039faecd0537" }
stakenet-sdk = { path = "sdk", version = "0.1.0" }
thiserror = "1.0.37"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "buffer", "timeout", "load-shed"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1.37" }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uriparse = "0.6.4"
validator-history = { path = "programs/validator-history", version = "0.1.0", features = ["no-entrypoint"] }

[patch.crates-io]
home = { git = "https://github.com/rust-lang/cargo", tag = "0.78.0" }

[profile.release]
overflow-checks = true
