[package]
name = "jito-stakenet-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jito-stakenet-api"
path = "src/bin/main.rs"

[dependencies]
anchor-lang = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
stakenet-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
validator-history = { workspace = true }
