[package]
name = "stakenet-sdk"
version = "0.1.0"
description = "SDK for Stakenet"
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "stakenet_sdk"

[dependencies]
anchor-lang = "0.31.1"
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.21"
jito-steward = { features = ["no-entrypoint"], path = "../programs/steward" }
jito-tip-distribution = { features = ["no-entrypoint"], workspace = true }
log = "0.4.18"
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-pod = { workspace = true }
spl-stake-pool = { features = ["no-entrypoint"], workspace = true }
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
validator-history = { features = ["no-entrypoint"], path = "../programs/validator-history" }
