[package]
name = "tests"
version = "0.1.0"
description = ""
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tests"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
bincode = "1.3.3"
borsh = "0.10.0"
borsh1 = { package = "borsh", version = "1.5.7" }
bv = "0.11.1"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
cfg-if = "1.0.0"
ed25519-dalek = "1.0.1"
futures = "0.3.25"
jito-priority-fee-distribution = { features = ["no-entrypoint"], workspace = true }
jito-steward = { features = ["no-entrypoint"], path = "../programs/steward" }
jito-tip-distribution = { features = ["no-entrypoint"], workspace = true }
jito-tip-distribution-sdk = { workspace = true }
rand = "0.7.3"
rand_chacha = "0.3.1"
semver = "1.0.17"
serde = "1.0.183"
serde_derive = "1.0.183"
solana-gossip = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-version = { workspace = true }
spl-associated-token-account = "7.0.0"
spl-stake-pool = { features = ["no-entrypoint"], workspace = true }
spl-token = { features = ["no-entrypoint"], workspace = true }
test-case = "3.3.1"
validator-history = { features = ["no-entrypoint"], path = "../programs/validator-history" }
validator-history-vote-state = { path = "../utils/vote-state" }
