[package]
name = "keeper-core"
version = "0.1.0"
edition = "2021"
description = "Core utilities for DSP keeper bots."
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.21"
log = "0.4.18"
solana-client = "1.18"
solana-metrics = "1.18"
solana-program = "1.18"
solana-sdk = "1.18"
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
