[package]
name = "stakenet-keeper"
version = "0.1.0"
edition = "2021"
description = "Script to keep validator history accounts up to date"

[dependencies]
anchor-lang = "0.31.1"
bincode = "1.3.3"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
dotenvy = { workspace = true }
env_logger = "0.10.0"
futures = "0.3.21"
futures-util = "0.3.21"
jito-priority-fee-distribution = { features = ["no-entrypoint"], workspace = true }
jito-steward = { features = ["no-entrypoint"], path = "../../programs/steward" }
jito-tip-distribution = { features = ["no-entrypoint"], workspace = true }
jito-tip-distribution-sdk = { workspace = true }
log = "0.4.18"
rand = "0.8.5"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = { workspace = true }
solana-bincode = { workspace = true }
solana-client = { workspace = true }
solana-gossip = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-packet = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-transaction-status = { workspace = true }
spl-stake-pool = { features = ["no-entrypoint"], workspace = true }
stakenet-sdk = { path = "../../sdk" }
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
validator-history = { features = [
    "no-entrypoint",
], path = "../../programs/validator-history" }
