[package]
name = "validator-keeper"
version = "0.1.0"
edition = "2021"
description = "Script to keep validator history accounts up to date"

[dependencies]
anchor-lang = "0.28.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.21"
futures-util = "0.3.21"
jito-tip-distribution = { git = "https://github.com/jito-foundation/jito-programs", rev = "b8f8d315306d6ac32450bd1aa23b7c1322a83bc7" }
keeper-core = { path = "../keeper-core" }
log = "0.4.18"
solana-account-decoder = "1.16"
solana-clap-utils = "1.16"
solana-client = "1.16"
solana-gossip = "1.16"
solana-metrics = "1.16"
solana-net-utils = "1.16"
solana-program = "1.16"
solana-sdk = "1.16"
solana-streamer = "1.16"
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
validator-history = { path = "../../programs/validator-history" }
