[package]
name = "jito-steward"
version = "0.1.0"
description = "Program for permissionlessly managing an SPL Stake Pool"
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_steward"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
custom-heap = []
# idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
bincode = "1.3.3"
blake3 = "1.3.1"
borsh = "0.10.0"
bytemuck = { features = ["derive", "min_const_generics"], version = "1.13.1" }
cfg-if = "1.0.0"
semver = "1.0.17"
serde = "1.0.188"
serde_derive = "1.0.183"
spl-pod = "0.1.0"
spl-stake-pool = { features = ["no-entrypoint"], version = "1.0.0" }
static_assertions = "1.1.0"
thiserror = "1.0.37"
type-layout = "0.2"
validator-history = { features = ["no-entrypoint"], path = "../validator-history" }
