[package]
name = "validator-history"
version = "0.1.0"
description = "Program for tracking validator metrics on chain"
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[package.metadata.cargo-udeps.ignore]
normal = ["solana-security-txt"]

[lib]
crate-type = ["cdylib", "lib"]
name = "validator_history"

[features]
anchor-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
mainnet-beta = []
testnet = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build", "no-entrypoint"]

[dependencies]
anchor-lang = "0.31.1"
bincode = "1.3.3"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
cfg-if = "1.0.0"
jito-priority-fee-distribution = { features = ["no-entrypoint"], workspace = true }
jito-tip-distribution = { features = ["no-entrypoint"], workspace = true }
semver = "1.0.17"
serde = "1.0.183"
serde_derive = "1.0.183"
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"
thiserror = "1.0.37"
type-layout = "0.2"
validator-history-vote-state = { path = "../../utils/vote-state" }
