[package]
name = "directed-staking-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to manage the steward program"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
jito-steward = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-program = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
spl-pod = { workspace = true }
spl-stake-pool = { workspace = true }
stakenet-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uriparse = { workspace = true }
validator-history = { workspace = true }
