[package]
name = "steward-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to manage the steward program"

[dependencies]
anchor-lang = "0.31.1"
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.7"
bytemuck = { version = "1.4.0", features = ["derive"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
dotenvy = { workspace = true }
futures = "0.3.21"
futures-util = "0.3.21"
jito-steward = { features = ["no-entrypoint"], path = "../../programs/steward" }
log = "0.4.18"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-pod = { workspace = true }
spl-stake-pool = { features = ["no-entrypoint"], workspace = true }
stakenet-keeper = { path = "../../keepers/stakenet-keeper" }
stakenet-sdk = { path = "../../sdk" }
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
validator-history = { features = ["no-entrypoint"], path = "../../programs/validator-history" }
