[package]
name = "validator-history-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to manage validator history program"

[dependencies]
anchor-lang = "0.31.1"
dotenvy = { workspace = true }
borsh = { package = "borsh", version = "1.5.7" }
clap = { version = "4.3.0", features = ["derive", "env"] }
ipinfo = { workspace = true }
log = "0.4.18"
env_logger = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-native-token = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-stake-pool = { workspace = true }
tokio = { workspace = true }
validator-history = { features = ["no-entrypoint"], path = "../../programs/validator-history" }
stakenet-keeper = { path = "../../keepers/stakenet-keeper" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
