[package]
name = "validator-history-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to manage validator history program"

[dependencies]
anchor-lang = "0.31.1"
borsh = { package = "borsh", version = "1.5.7" }
clap = { version = "4.3.0", features = ["derive", "env"] }
ipinfo = { workspace = true }
log = "0.4.18"
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-native-token = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-stake-pool = { workspace = true }
stakenet-sdk = { path = "../../sdk" }
tokio = { workspace = true }
validator-history = { features = ["no-entrypoint"], path = "../../programs/validator-history" }
