[package]
name = "validator-history-vote-state"
version = "0.1.2"
edition = "2021"
description = "VoteState code copied from Solana."
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[dependencies]
anchor-lang = "0.30.0"
bincode = "1.3.3"
serde = { version = "1.0.138", features = ["derive"] }
solana-program = "1.18"
